--- a/about-us.html
+++ b/about-us.html
@@ -41,9 +41,15 @@
 
       <div class="container">
         <div class="content">
+          <h3>Our Project</h3>
           <div class="about-1">
             <div class="left">
-              <h3>About Us:</h3>
+              <div>
+                <img src="images/about-us-1.png" alt="photo" />
+              </div>
+            </div>
+            <div class="right">
+              <h4>Project one</h4>
               <p>
                 Future House Investment and Real Estate Development Company
                 owned by Engineer Romany Andraws, is a pioneering force in
@@ -51,49 +57,26 @@
                 mission is to deliver luxurious sustainablelifestyles through a
                 diverse portfolio of projects.
               </p>
-            </div>
-            <div class="right">
-              <img src="images/about-us-1.png" alt="photo" />
+              <a href="#">read more <i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
+
           <div class="about-1 reverse">
             <div class="left">
-              <p>
-                With over 22 years of expertise in consulting and development,
-                Future House has successfully launched and expanded numerous
-                projects, including large-scale developments in new urban
-                cities. Our portfolio encompasses residential, commercial, and
-                administrative projects.
-              </p>
+              <div>
+                <img src="images/about-us-1.png" alt="photo" />
+              </div>
             </div>
             <div class="right">
-              <img src="images/about-us-2.png" alt="photo" />
-            </div>
-          </div>
-
-          <article class="about-2">
-            <img src="images/about-us-3.png" alt="photo" />
-            <p>
-              Future House has achieved remarkable success, executing over 150
-              projects comprising luxury apartments, villas and commercial and
-              administrative developments, such as Future Mall 1 and Future Mall
-              2. This showcases our company's long-standing independence and
-              resilience
-            </p>
-          </article>
-
-          <div class="about-1">
-            <div class="left">
+              <h4>Project one</h4>
               <p>
-                Despite challenges facing Egypt's real estate market, we at
-                Future House are confident in our ability to overcome them. Our
-                distinguished team of experts, innovative design and execution
-                approach and commitment to excellence enable us to build not
-                just properties but a better future.
+                Future House Investment and Real Estate Development Company
+                owned by Engineer Romany Andraws, is a pioneering force in
+                Egypt's real estate development sector. Established in 2008, our
+                mission is to deliver luxurious sustainablelifestyles through a
+                diverse portfolio of projects.
               </p>
-            </div>
-            <div class="right">
-              <img src="images/about-us-4.png" alt="photo" />
+              <a href="#">read more <i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
