--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
   </head>
-  <body>
+  <body id="up">
     <!-- Start header -->
     <header>
       <div class="container">
@@ -147,31 +147,92 @@
     <!-- End project section -->
 
     <!-- Start explore section -->
-    <div class="explore">
+    <div class="about-us-section">
       <div class="container">
-        <h3>explore more properties</h3>
-        <div class="btns">
-          <button>rent</button>
-          <button>buy</button>
-        </div>
+        <div class="content">
+          <div class="left" data-aos="fade-left" data-aos-duration="1000">
+            <img src="images/expert-1.png" alt="photo" />
+          </div>
+          <div class="right" data-aos="fade-right" data-aos-duration="500">
+            <span>about us</span>
+            <h4>Future House</h4>
+            <p>
+              Future House Investment and Real Estate Development Company, owned
+              by Engineer Romany Andraws, is a pioneering force in Egypt's real
+              estate development sector. Established in 2008, our mission is to
+              deliver luxurious, sustainable lifestyles through a diverse
+              portfolio of projects.
+            </p>
 
-        <ul class="list">
-          <li>cairo</li>
-          <li>north coast</li>
-          <li>giza</li>
-          <li>alexandria</li>
-          <li>al daqahlya</li>
-          <li>red sea</li>
-          <li>qalyubia</li>
-          <li>suez</li>
-          <li>al Gharbeya</li>
-          <li>matrouh</li>
-          <li>south sainal</li>
-          <li>sharqia</li>
-        </ul>
+            <p>
+              With over 22 years of expertise in consulting and development,
+              Future House has successfully launched and expanded numerous
+              projects, including large-scale developments in new urban cities.
+              Our portfolio encompasses residential, commercial, and
+              administrative projects.
+            </p>
+
+            <p>
+              Future House has achieved remarkable success, executing over 150
+              projects comprising luxury apartments, villas, and commercial and
+              administrative developments, such as Future Mall 1 and Future Mall
+              2. This showcases our company's long-standing independence and
+              resilience.
+            </p>
+
+            <p>
+              Despite challenges facing Egypt's real estate market, we at Future
+              House are confident in our ability to overcome them. Our
+              distinguished team of experts, innovative design and execution
+              approach, and commitment to excellence enable us to build not just
+              properties, but a better future."
+            </p>
+            <a href="#">read more</a>
+          </div>
+        </div>
       </div>
     </div>
     <!-- End explore section -->
+
+    <!-- start up button -->
+    <a class="up-button" href="#up">
+      <i class="fa-solid fa-arrow-up"></i>
+    </a>
+
+    <!-- End up button -->
+
+    <div class="our-vision">
+      <div class="container">
+        <ul>
+          <li class="vision">
+            <img src="images/v1.png" alt="icon" />
+            <h3>our vision</h3>
+            <p>
+              our vision to create a community where all are empowered to make
+              an impact in their life and the lives of others.
+            </p>
+          </li>
+          <li class="mission">
+            <img src="images/v2.png" alt="icon" />
+            <h3>our mission</h3>
+            <p>
+              our mission is to create an environment where our clients thrive
+              and develop a long-lasting connection to their home and
+              communities in which they live or work
+            </p>
+          </li>
+          <li class="values">
+            <img src="images/v3.png" alt="icon" />
+            <p>our values</p>
+            <p>
+              we lead, no matter our role. We set each other up for success. We
+              believe the details matter. We are ethical above all else.
+              compassion is at our core
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <!-- Start footer section -->
     <div class="footer">
