--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           </li>
           <li class="values">
             <img src="images/v3.png" alt="icon" />
-            <p>our values</p>
+            <h3>our values</h3>
             <p>
               we lead, no matter our role. We set each other up for success. We
               believe the details matter. We are ethical above all else.
