--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    />
   </head>
   <body>
     <!-- Start header -->
@@ -60,25 +64,85 @@
     <!-- End banner -->
 
     <div class="content-project">
-      <div class="container">
-        <img src="images/projects.png" alt="photo" />
+      <div class="project">
+        <div class="content">
+          <div class="container">
+            <h3 data-aos="fadeInUp" data-aos-easing="ease">Our Project</h3>
+            <div class="index-proj">
+              <div class="left" data-aos="fade-right" data-aos-duration="1000">
+                <div>
+                  <img src="images/about-us-1.png" alt="photo" />
+                </div>
+              </div>
+              <div class="right" data-aos="fade-up" data-aos-duration="1000">
+                <h4>Project one</h4>
+                <p>
+                  Future House Investment and Real Estate Development Company
+                  owned by Engineer Romany Andraws, is a pioneering force in
+                  Egypt's real estate development sector. Established in 2008,
+                  our mission is to deliver luxurious sustainablelifestyles
+                  through a diverse portfolio of projects.
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
 
-        <div class="project-1">
-          <h3>projects</h3>
-          <p>
-            The company had already achieved great success in implementing more
-            than 150 projects including residential apartments and villas. This
-            was in addition to our commercial and administrative projects
-            represented in Future Mall 1, Future Mall 2, and The Administrative
-            Future Mall, demonstrating the company’s independent entity long
-            time ago
-          </p>
-          <img src="images/about-us-3.png" alt="photo" />
+          <div class="index-proj reverse">
+            <div class="container">
+              <div class="left" data-aos="fade-right" data-aos-duration="3000">
+                <div>
+                  <img src="images/about-us-1.png" alt="photo" />
+                </div>
+              </div>
+              <div class="right" data-aos="fade-up" data-aos-duration="2000">
+                <h4>Project one</h4>
+                <p>
+                  Future House Investment and Real Estate Development Company
+                  owned by Engineer Romany Andraws, is a pioneering force in
+                  Egypt's real estate development sector. Established in 2008,
+                  our mission is to deliver luxurious sustainablelifestyles
+                  through a diverse portfolio of projects.
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="index-proj">
+              <div class="left" data-aos="fade-right" data-aos-duration="1000">
+                <div>
+                  <img src="images/about-us-1.png" alt="photo" />
+                </div>
+              </div>
+              <div class="right" data-aos="fade-left" data-aos-duration="1000">
+                <h4>Project one</h4>
+                <p>
+                  Future House Investment and Real Estate Development Company
+                  owned by Engineer Romany Andraws, is a pioneering force in
+                  Egypt's real estate development sector. Established in 2008,
+                  our mission is to deliver luxurious sustainablelifestyles
+                  through a diverse portfolio of projects.
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
         </div>
-
+      </div>
+      <div class="container">
         <div class="project-description">
-          <h3>ABOUT FUTURE MALL:</h3>
-          <p>
+          <h3 data-aos="fade-right" data-aos-duration="1000">
+            ABOUT FUTURE MALL:
+          </h3>
+          <p data-aos="fade-right" data-aos-duration="1000">
             First and oldest mall Located in the heart of El Shorouk City,
             Future Mall is the ultimate shopping and entertainment destination
             catering to the diverse needs of the city's thriving community.
@@ -89,19 +153,19 @@
           </p>
 
           <ul>
-            <li data-number="1">
+            <li data-number="1" data-aos="fade-up" data-aos-duration="1000">
               V- Mall is a major architectural achievement developed by Future
               House for Real Estate Development Located in the heart of El
               Shorouk City, next to Green Hills Club, it serves a large and
               diverse community
             </li>
-            <li data-number="2">
+            <li data-number="2" data-aos="fade-up" data-aos-duration="1200">
               The mall has three commercial floors with a wide range of stores,
               restaurants, and services. It offers various commercial spaces,
               starting from 17 square meters, providing opportunities for
               investors and retailers
             </li>
-            <li data-number="3">
+            <li data-number="3" data-aos="fade-up" data-aos-duration="1300">
               V- Mall meets the needs of modern city residents. Its location
               near top schools and entertainment venues makes it easily
               accessible and a vibrant community
@@ -158,7 +222,7 @@
 
     <div class="footer-end">2023 company</div>
     <!-- End footer section -->
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
